<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mis_Datos">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/misDatostxt"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imagenPerfil"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/fondo_degradado">
        </androidx.appcompat.widget.AppCompatImageView>
        <TextView
            android:text="@string/uidDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/nombresDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/correoDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/passwordDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/edadDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/direccionDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/telefonoDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/actualizarDatos"
            android:text="@string/actualizarDatos"
            android:layout_marginTop="25sp"
            android:background="@drawable/fondo_degradado"
            android:layout_gravity="center"
            android:drawableStart="@drawable/actualizar_ico"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/actualizarPassword"
            android:text="@string/actualizarPassword"
            android:layout_marginTop="25sp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/actualizar_pass_ico"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>